--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -1,9 +1,14 @@
 [tools]
+deno = "latest"
 lua-language-server = "latest"
 node = "latest"
+"npm:@biomejs/biome" = "latest"
+"npm:typescript-language-server" = "latest"
 "pipx:basedpyright" = "latest"
 "pipx:django-template-lsp" = "latest"
 "pipx:djlint" = "latest"
 "pipx:ruff" = "latest"
+python = "3.13"
 stylua = "latest"
+usage = "latest"
 uv = "latest"
