.configファイル分解

--- a/.github/workflows/nix-build.yaml
+++ b/.github/workflows/nix-build.yaml
@@ -10,7 +10,7 @@ on:
       - 'flake.nix'
       - 'flake.lock'
       - 'nix/**'
-      - '.config/nix/**'
+      - 'configuration.nix'
       - '.github/workflows/nix-build.yaml'
   workflow_dispatch:
 
