--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
-.config/github-copilot/
-.config/wslu/
-.config/fish/functions/
-.config/.wrangler/
-.config/direnv/
-.config/environment.d
-.config/gh/
-.config/fontconfig/
-.config/configstore/
-.config/fish/fishd.tmp.*
-.config/git/
-fish_variables
-chromium
+# Nix build results
+result
+result-*
+
+# Fish shell
+fish/fish_variables
+
+# Git credentials
 gh/hosts.yml
+
+# Log files
+btop/btop.log
+
+# Other
+chromium
