--- a/.github/workflows/nix-flake.yaml
+++ b/.github/workflows/nix-flake.yaml
@@ -6,6 +6,7 @@ on:
       - 'flake.nix'
       - 'flake.lock'
       - 'nix/**'
+      - 'configuration.nix'
       - '.github/workflows/nix-flake.yaml'
   pull_request:
 
